--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -13,6 +13,7 @@
 @import 'components/sidebar.css';
 @import 'components/lists.css';
 @import 'components/suggestions.css';
+@import 'components/welcome-message.css';
 @import 'components/auth-popup.css';
 
 @import 'layout/grid.css';
